samples/_failures_safe/1761696418_9a7916_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efedc794.c: In function ‘main’:
./samples/SAFE/__tmp_efedc794.c:175:18: error: expected ‘;’ at end of input
  175 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_efedc794.c:175:13: error: expected declaration or statement at end of input
  175 |             break
      |             ^~~~~
./samples/SAFE/__tmp_efedc794.c:175:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efedc794.c:175:13: error: expected declaration or statement at end of input
